--- a/sources/GENESIS.PresentationFramework/GENESIS.PresentationFramework.csproj
+++ b/sources/GENESIS.PresentationFramework/GENESIS.PresentationFramework.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -21,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\GENESIS.LanguageExtensions\GENESIS.LanguageExtensions.csproj" />
+      <ProjectReference Include="..\GENESIS.LanguageExtensions\GENESIS.LanguageExtensions.csproj" />
       <ProjectReference Include="..\GENESIS.GPU\GENESIS.GPU.csproj" />
       <ProjectReference Include="..\GENESIS.LanguageExtensions\GENESIS.LanguageExtensions.csproj" />
     </ItemGroup>
